--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 		    <h3 class="text-center mt-5">Tools</h3>
 		    <div class="d-flex flex-md-column">
 		        <div id="tools-1" class="d-md-flex justify-content-center">
-		        	<img width="150" src="./images/logo-html5.png"/>
+		        	<img width="150" src="./Images/logo-html5.png"/>
 		        	<img width="150" src="images/logo-css3.png"/>
 		        	<img width="150" src="images/logo-javascript.png"/>
 		            <img width="150" src="images/logo-mongodb.png"/>
