--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<section id="landing" class="container-fluid p-5">
 	  <div class="row align-items-center">
 	  	<div class="col-12 col-md-4 order-md-1 text-center">
-	      <img class="rounded-circle" src="./Images/image1.png" width="250">
+	      <img class="rounded-circle" src="././Images/image1.png" width="250">
 	    </div>
 	    <div class="col-12 col-md-8 order-md-2">
 	      <h1 class="mt-md-5">Niliza Villodres</h1>
@@ -221,7 +221,7 @@
 				<!-- HTML Card Start -->
 				<div class="card col-12 col-md-4 mb-4 m-md-5">
 				  <div class="card-body">
-				  	<img id="projectsimg" src="./Images/html2.png" class="card-img-top" alt="...">
+				  	<img id="projectsimg" src="././Images/html2.png" class="card-img-top" alt="...">
 				    <h5 class="card-title mt-2">HTML</h5>
 				    <h6 class="card-subtitle mb-2 text-white">HTML: Structure of Web Pages</h6>
 				    <p class="card-text">I have developed a strong foundation in HTML, mastering the basic structure of the language along with various elements, tags, hyperlinks, attributes, tables, and forms. Through individual and group work activities, I have honed my skills in creating well-structured web pages that are both visually appealing and functional. I have completed group activities that showcase my ability to design and implement websites with clear navigation, forms, and organized content. My proficiency in HTML allows me to create engaging digital experiences that cater to the needs of users while adhering to web development best practices.</p>
@@ -233,7 +233,7 @@
 				<!-- CSS Card Start -->
 				<div class="card col-12 col-md-4 mb-4 m-md-5">
 				  <div class="card-body">
-				  	<img id="projectsimg" src="./Images/css2.png" class="card-img-top w-100" alt="...">
+				  	<img id="projectsimg" src="././Images/css2.png" class="card-img-top w-100" alt="...">
 				    <h5 class="card-title mt-2">CSS</h5>
 				    <h6 class="card-subtitle mb-2 text-white">Styling for Web Design</h6>
 				    <p class="card-text">Through group activities, I have sharpened my CSS skills by delving deep into styling elements, selectors, combinators, specificity, box models, and other key aspects of CSS. Working collaboratively on various projects has allowed me to apply these skills in real-world scenarios, enhancing my understanding of how CSS can be used to create visually appealing and dynamic web designs. By actively participating in group activities, I have not only strengthened my proficiency in CSS but also gained valuable experience in working as part of a team to achieve common goals. This hands-on approach to learning has been instrumental in broadening my skill set and preparing me to tackle more complex CSS challenges in the future.</p>
@@ -245,7 +245,7 @@
 				<!-- Bootstrap Card Start -->
 				<div class="card col-12 col-md-4 mb-4 m-md-5" style="width: 18rem;">
 				  <div class="card-body">
-				  	<img id="projectsimg" src="./Images/bootstrap2.png" class="card-img-top" alt="...">
+				  	<img id="projectsimg" src="././Images/bootstrap2.png" class="card-img-top" alt="...">
 				    <h5 class="card-title mt-2">Bootstrap</h5>
 				    <h6 class="card-subtitle mb-2 text-white">Responsive Web Design Framework</h6>
 				    <p class="card-text">I have learned and applied skills in Bootstrap, using both version 4 and 5 of the framework. I utilized Bootstrap's styles, grid system, flex properties, UI components, and other essential Bootstrap code. These skills have been put to the test in numerous projects completed collaboratively with my peers. By working on these projects, I have gained hands-on experience in implementing responsive designs, creating visually appealing interfaces, and optimizing user experience through the effective use of Bootstrap features. My proficiency in Bootstrap has allowed me to contribute significantly to the success of our group projects and has equipped me with valuable expertise in front-end development.</p>
@@ -271,21 +271,21 @@
 		    <h3 class="text-center mt-5">Tools</h3>
 		    <div class="d-flex flex-md-column">
 		        <div id="tools-1" class="d-md-flex justify-content-center">
-		        	<img width="150" src="./Images/logo-html5.png"/>
-		        	<img width="150" src="images/logo-css3.png"/>
-		        	<img width="150" src="images/logo-javascript.png"/>
-		            <img width="150" src="images/logo-mongodb.png"/>
-		            <img width="150" src="images/logo-nodejs.png"/>
-		            <img width="150" src="images/logo-expressjs.png"/>
+		        	<img width="150" src="././Images/logo-html5.png"/>
+		        	<img width="150" src="./Images/logo-css3.png"/>
+		        	<img width="150" src="./Images/logo-javascript.png"/>
+		            <img width="150" src="./Images/logo-mongodb.png"/>
+		            <img width="150" src="./Images/logo-nodejs.png"/>
+		            <img width="150" src="./Images/logo-expressjs.png"/>
 		            
 		        </div>
 		        <div id="tools-2" class="d-md-flex justify-content-center">
-		        	<img width="150" src="images/logo-react.png"/>
-		        	<img width="150" src="images/logo-heroku.png"/>
-		            <img width="150" src="images/logo-git.png"/>
-		            <img width="150" src="images/logo-sublime-text-3.png"/>
-		            <img width="150" src="images/logo-postman.png"/>
-		            <img width="150" src="images/logo-gitlab-ci-cd.png"/>
+		        	<img width="150" src="./Images/logo-react.png"/>
+		        	<img width="150" src="./Images/logo-heroku.png"/>
+		            <img width="150" src="./Images/logo-git.png"/>
+		            <img width="150" src="./Images/logo-sublime-text-3.png"/>
+		            <img width="150" src="./Images/logo-postman.png"/>
+		            <img width="150" src="./Images/logo-gitlab-ci-cd.png"/>
 		        </div>
 		    </div>	    
 		</div>
@@ -310,7 +310,7 @@
 		  <div class="row">
 		   	<div class="col-12 col-md-4 d-flex justify-content-center">
 		   	  <a href="https://www.linkedin.com/in/niliza/" target="_blank">
-		   	    <img id="contactlogo" src="./Images/linkedin.png" class="rounded-circle" alt="LinkedIn logo"></a>
+		   	    <img id="contactlogo" src="././Images/linkedin.png" class="rounded-circle" alt="LinkedIn logo"></a>
 		   	  <div>
 		   	    <p><a class="text-decoration-none" href="https://www.linkedin.com/in/niliza/" target="_blank">Visit my LinkedIn</a></p>
 		   	  </div>
@@ -318,14 +318,14 @@
 
 		    <div class="col-12 col-md-4 d-flex align-items-center">
 		      <a href="mailto:nilizavillodres@gmail.com" target="_blank">
-		        <img id="contactlogo" src="./Images/email.png" class="rounded-circle" alt="Email logo">
+		        <img id="contactlogo" src="././Images/email.png" class="rounded-circle" alt="Email logo">
 		      </a>
 		      <p><a class="text-decoration-none" href="mailto:nilizavillodres@gmail.com" target="_blank">Email Me at nilizavillodres@gmail.com</a></p>
 		    </div>
 
 		    <div class="col-12 col-md-4 d-flex justify-content-center">
 		      <a href="https://wa.me/639955836921" target="_blank" >
-		        <img id="contactlogo" src="./Images/call.png" class="rounded-circle" alt="Phone logo">
+		        <img id="contactlogo" src="././Images/call.png" class="rounded-circle" alt="Phone logo">
 		      </a>
 		      <p><a class="text-decoration-none" href="https://wa.me/639955836921" target="_blank">Connect thru WhatsApp at +639955836921</a></p>
 		    </div>
@@ -346,7 +346,7 @@
 	        <div class="col-12 col-md-4 text-center">
 	          <div class="contact-item mx-auto mb-5 mb-md-0">
 	            <a href="https://www.linkedin.com/in/niliza/" target="_blank">
-	              <img id="contactlogo" src="./Images/linkedin.png" class="rounded-circle" alt="LinkedIn logo"></a>
+	              <img id="contactlogo" src="././Images/linkedin.png" class="rounded-circle" alt="LinkedIn logo"></a>
 	            <div>
 	              <p><a class="text-decoration-none" href="https://www.linkedin.com/in/niliza/" target="_blank">Visit my LinkedIn</a></p>
 	            </div>
@@ -356,7 +356,7 @@
 	        <div class="col-12 col-md-4 text-center">
 	          <div class="contact-item mx-auto mb-5 mb-md-0">
 	            <a href="mailto:nilizavillodres@gmail.com" target="_blank">
-	              <img id="contactlogo" src="./Images/email.png" class="rounded-circle" alt="Email logo">
+	              <img id="contactlogo" src="././Images/email.png" class="rounded-circle" alt="Email logo">
 	            </a>
 	            <div>
 	              <p><a class="text-decoration-none" href="mailto:nilizavillodres@gmail.com" target="_blank">Email Me at nilizavillodres@gmail.com</a></p>
@@ -367,7 +367,7 @@
 	        <div class="col-12 col-md-4 text-center">
 	          <div class="contact-item mx-auto mb-5 mb-md-0">
 	            <a href="https://wa.me/639955836921" target="_blank">
-	              <img id="contactlogo" src="./Images/call.png" class="rounded-circle" alt="Phone logo">
+	              <img id="contactlogo" src="././Images/call.png" class="rounded-circle" alt="Phone logo">
 	            </a>
 	            <div>
 	              <p><a class="text-decoration-none" href="https://wa.me/639955836921" target="_blank">Connect thru WhatsApp at +639955836921</a></p>
