Update web profile

--- a/index.html
+++ b/index.html
@@ -422,6 +422,9 @@
 			
 		</div>
 
+	<!-- Section 5 Contact End-->
+
+	<!-- added space after contact form -->
 	</section>
 	<section id="endpart" class="p-5"> 
 		<div class="p-0"> <!-- Added a fixed height to create a blank space in the bottom of the page --> 
@@ -429,12 +432,7 @@
 		</div> 
 	</section>
 
-
-
-	
-		
-
-	<!-- Section 5 Contact End-->
+	<!-- Footer section start -->
 
 	<footer class="py-3 fixed-bottom text-white text-center">
 	    <div class="container">
