Edit contact form

--- a/index.html
+++ b/index.html
@@ -375,24 +375,24 @@
 	<section id="contact">
 		<div id="form" class="row d-flex justify-content-center col-12 col-sm-12 col-md-8 col-lg-8 col-xl-4 mx-auto py-5 mb-0 rounded">
 
-			<form>
+			<form action="https://forms.gle/T4pN6UwQB6SSKNmC6" method="POST" target="_blank">
 			  <div class="mb-3">
 			    <label for="name" class="form-label">Name</label>
-			    <input type="text" class="form-control" id="name" placeholder="Write your name" autocomplete="name" required>
+			    <input type="text" class="form-control" id="name" name="entry.2012993733" placeholder="Write your name" autocomplete="name" required>
 			  </div>
 			  <div class="mb-3">
 			    <label for="email" class="form-label">Email</label>
-			    <input type="email" class="form-control" id="email" placeholder="Enter your email" autocomplete="email" required>
+			    <input type="email" class="form-control" id="email" name="entry.1252876828" placeholder="Enter your email" autocomplete="email" required>
 			  </div>
 			  <div class="mb-3">
 			    <label for="contact" class="form-label">Contact Number</label>
-			    <input type="tel" class="form-control" id="contact2" placeholder="Enter your contact #" autocomplete="tel" required>
+			    <input type="tel" class="form-control" id="contact" name="entry.68711396" placeholder="Enter your contact #" autocomplete="tel" required>
 			  </div>
 			  <div class="mb-3">
 			    <label for="message" class="form-label">Message</label>
-			    <textarea class="form-control" id="message" placeholder="Write your message here" rows="4"></textarea>
+			    <textarea class="form-control" id="message" name="entry.2468013579" placeholder="Write your message here" rows="4"></textarea>
 			  </div>
-			  <button type="submit" class="btn btn-secondary" action="mailto:nilizavillodres@gmail.com">Send Message</button>
+			  <button type="submit" class="btn btn-secondary">Send Message</button>
 			</form>
 			
 
