--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 	<section id="contact">
 		<div id="form" class="row d-flex justify-content-center col-12 col-sm-12 col-md-8 col-lg-8 col-xl-4 mx-auto py-5 mb-0 rounded">
 
-			<form action="https://forms.gle/T4pN6UwQB6SSKNmC6" method="POST" target="_blank">
+			<form action="https://forms.gle/CX2jgKkSJveXpYKv9" method="POST" target="_blank">
 			  <div class="mb-3">
 			    <label for="name" class="form-label">Name</label>
 			    <input type="text" class="form-control" id="name" name="entry.2012993733" placeholder="Write your name" autocomplete="name" required>
