Edit contact form 8

--- a/index.html
+++ b/index.html
@@ -372,39 +372,19 @@
 		  </div>
 	</section>
 
-	<section id="contact">
-		<div id="form" class="row d-flex justify-content-center col-12 col-sm-12 col-md-8 col-lg-8 col-xl-4 mx-auto py-5 mb-0 rounded">
+	<section id="contact" class="container-fluid py-5">
+	    <div class="row justify-content-center">
+	        <div class="col-12 col-md-8 col-lg-6">
+	            <div class="embed-responsive embed-responsive-1by1">
+	                <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSd7eLNBykrCHcuuOsaza6hXrxmiHBONPDriYR8WBLvevlA-6g/viewform?embedded=true&hl=en" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
+	            </div>
+	        </div>
+	    </div>
+	</section>
 
-			<!-- <form action="https://forms.gle/CX2jgKkSJveXpYKv9" method="POST" target="_blank">
-			  <div class="mb-3">
-			    <label for="name" class="form-label">Name</label>
-			    <input type="text" class="form-control" id="name" name="entry.2012993733" placeholder="Write your name" autocomplete="name" required>
-			  </div>
-			  <div class="mb-3">
-			    <label for="email" class="form-label">Email</label>
-			    <input type="email" class="form-control" id="email" name="entry.1252876828" placeholder="Enter your email" autocomplete="email" required>
-			  </div>
-			  <div class="mb-3">
-			    <label for="contact" class="form-label">Contact Number</label>
-			    <input type="tel" class="form-control" id="contact" name="entry.68711396" placeholder="Enter your contact #" autocomplete="tel" required>
-			  </div>
-			  <div class="mb-3">
-			    <label for="message" class="form-label">Message</label>
-			    <textarea class="form-control" id="message" name="entry.2468013579" placeholder="Write your message here" rows="4"></textarea>
-			  </div>
-			  <button type="submit" class="btn btn-secondary">Send Message</button>
-			</form> -->
-			
-			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd7eLNBykrCHcuuOsaza6hXrxmiHBONPDriYR8WBLvevlA-6g/viewform?embedded=true&hl=en" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
-
-
-
-		</div>
 
 	<!-- Section 5 Contact End-->
 
-	<!-- added space after contact form -->
-	</section>
 	<section id="endpart" class="p-5"> 
 		<div class="p-0"> <!-- Added a fixed height to create a blank space in the bottom of the page --> 
 			<p class="d-none">0</p> 
