--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 	<section id="contact">
 		  <div class="py-3 pb-3">
 		    <div class="p-5">
-		      <h2 class="text-center">Contact Me</h2>
+		      <h2 class="text-center">Stay in Touch</h2>
 		    </div>
 
 		    <div class="container-fluid">
