--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
-	<title>Niliza Villodres: Full Stack Web Developer</title>
+	<title>Niliza Villodres-Sasi: Full Stack Web Developer</title>
 </head>
 <body>
 
 	<!-- Nav Bar Start-->
 	<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  		<a class="navbar-brand" href="#landing">Niliza Villodres</a>
+  		<a class="navbar-brand" href="#landing">Niliza Villodres-Sasi</a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
   		</button>
