--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 	  <div class="container-fluid my-1">
 	    <div class="row d-flex align-items-center justify-content-center">
 	      <div class="col-md-2 offset-md-2 text-md-start text-center">
-	        <p class="mb-0">&copy; 2024 Niliza Villodres-Sasi</p>
+	        <p class="mb-0">&copy; 2024 Niliza V. Sasi</p>
 	      </div>
 	      <div class="col-md-2 col d-flex justify-content-center justify-content-md-end align-items-center">
 	        <div class="row w-100 d-none d-md-flex align-items-center">
